# anita

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  create_anki_deck.py  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit-weekly.yml  ci.yml  docker.yml  pre-commit-autoupdate.yml  release-please.yml  release.yml  stale.yml
anita/: __init__.py  cache.py  cli.py  deck.py  deck_generator.py  model.py
anita/providers/: __init__.py  images.py  retry.py  tts.py
examples/: basics.csv  restaurant.csv
tests/: conftest.py  test_cache.py  test_cli.py  test_deck.py  test_integration.py  test_model.py  test_providers.py
tests/fixtures/: sample.csv
