[project]
name = "anita-anki"
version = "0.2.0"
description = "AI-powered Anki deck generator: turn a CSV of word pairs into a multimedia .apkg with TTS and illustrations."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "timpara", email = "t.paraskevopoulos@posteo.de" },
]
keywords = [
    "anki",
    "anki-deck",
    "language-learning",
    "spaced-repetition",
    "openai",
    "dall-e",
    "tts",
    "elevenlabs",
    "flashcards",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Utilities",
]
dependencies = [
    "genanki>=0.13.1,<0.14",
    "openai>=2.32.0,<3",
    "requests>=2.32,<3",
    "pillow>=11,<13",
    "platformdirs>=4,<5",
    "python-dotenv>=1.2.2,<2",
    "typer>=0.12,<1",
]

[project.optional-dependencies]
elevenlabs = ["elevenlabs>=2.7,<3"]
dev = [
    "elevenlabs>=2.7,<3",
    "pytest>=9.0.3",
    "pytest-cov>=5",
    "pytest-mock>=3.12",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-requests",
    "pre-commit>=3.7",
]

[project.urls]
Homepage = "https://github.com/timpara/anita"
Repository = "https://github.com/timpara/anita"
Issues = "https://github.com/timpara/anita/issues"
Changelog = "https://github.com/timpara/anita/blob/main/CHANGELOG.md"

[project.scripts]
anita = "anita.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["anita"]

[tool.hatch.build.targets.sdist]
include = [
    "/anita",
    "/examples",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["anita", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "SIM", # simplify
    "N",   # pep8-naming
    "RUF", # ruff-specific
    "C4",  # comprehensions
    "PTH", # use pathlib
]
ignore = [
    "E501", # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "N802"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
# Phase 1 of incremental strictness (issue #23). Phases 2 (per-module
# ignore_missing_imports) and 3 (strict = true) are tracked in follow-up
# issues.
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
files = ["anita"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --cov=anita --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]

[tool.coverage.run]
source = ["anita"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
